building hw1 page and home page link

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 </head>
 <body>
 
-<h1>Testing</h1>
+<h1>CSCI 250 Website</h1>
 <p>hello</p>
+<a href="madicatalano.github.io/hw1.html">homework assignment 1</a>
 
 </body>
 </html>
