--- a/hw1.html
+++ b/hw1.html
@@ -13,7 +13,8 @@
     Mauris posuere iaculis felis ut commodo. Fusce aliquam sapien varius nisi bibendum pretium. 
     Quisque sed accumsan eros. Etiam sit amet neque nisl. Duis ac ipsum non risus varius fermentum sed eget nisl. 
     Phasellus eleifend, mauris ac venenatis ultricies, ante diam dapibus mauris, nec pellentesque nisl quam tempor nisl. 
-    Suspendisse vestibulum eget velit vel placerat. Maecenas sed ullamcorper urna. Nunc tincidunt justo non semper euismod.</p>
+    Suspendisse vestibulum eget velit vel placerat. Maecenas sed ullamcorper urna. Nunc tincidunt justo non semper euismod.
+</p>
 
 <a href="madicatalano.github.io">Back to main page</a>  
 </body>
