--- a/hw1.html
+++ b/hw1.html
@@ -16,6 +16,6 @@
     Suspendisse vestibulum eget velit vel placerat. Maecenas sed ullamcorper urna. Nunc tincidunt justo non semper euismod.
 </p>
 
-<a href="madicatalano.github.io">Back to main page</a>  
+<a href="madicatalano.github.io/index.html">Back to main page</a>  
 </body>
 </html>
