grammar changes on hw par

--- a/hw1.html
+++ b/hw1.html
@@ -8,22 +8,15 @@
 <h1>CSCI 250 Website</h1>
 <h2>Homework 1 Assignment</h2>
 <h3>CHAPTER ONE</h3>
-<p>In chapter one, <i>A Pragmatic Philosphy</i> there were two sections that stood out to me.
-    First, I thought that the opening section, before "The cat ate my source code", was interesting
-    due to not knowing what a Pragmatic Programmer was. The author describes it as an attitude, a style, 
-    and a philosphy for solving their problems. They stand out from the others because they think beyond the problem
-    at hand and are known for taking action and making sure their project is finished correctly. 
+<p>In chapter one, <i>A Pragmatic Philosphy</i> two sections stood out to me.
+    First, I thought that the opening section, before "The cat ate my source code", was interesting due to not knowing what a Pragmatic Programmer was. The author describes it as an attitude, a style, 
+    and a philosophy for solving their problems. They stand out from the others because they think beyond the problem at hand and are known for taking action and making sure their project is finished correctly. 
 </p>
 <p>
-    In the second section, "Software Entropy", the author defines entropy as a term in physics that
-    refers to the amount of disorder or wrong in a system. This opened up to the "Broken Window Theory" 
-    which is criminological theory that states if there are visible signs of crime and misbehavior, such as vandilism, in a 
-    specific area, the environment is more likely to be plagued with more crime. This is due to the mess from the original
-    crime not being cleaned up, it shows the citizens that the city doesnt care. The author used this theory to create an 
-    analogy for a programmer slacking on fixing their bad code. It doesnt matter if it's a bad design, a wrong decision,
-    or poor code in general, if the programmer is not on top of the situation, it gets out of hand. I agree that it could be 
-    very easy to slip into this mindset because if the project is discouraging in one way or another, the programmer is less 
-    likely to want to spend time fixing the mistake rather than just scrapping the work all together.
+    In the second section, "Software Entropy", the author defines entropy as a term in physics that refers to the amount of disorder or wrong in a system. This opened up to the "Broken Window Theory" 
+    which is a criminological theory that states if there are visible signs of crime and misbehavior, such as vandalism, in a 
+    specific area, the environment is more likely to be plagued with more crime. This is due to the mess from the original crime not being cleaned up, it shows the citizens that the city doesn't care. The author used this theory to create an analogy for a programmer slacking on fixing their bad code. It doesn't matter if it's a bad design, a wrong decision,
+    or poor code in general, if the programmer is not on top of the situation, it gets out of hand. I agree that it could be very easy to slip into this mindset because if the project is discouraging in one way or another, the programmer is less likely to want to spend time fixing the mistake rather than just scrapping the work altogether.
 </p>
 
 <a href="https://www.madicatalano.github.io">Back to homepage</a> 
