--- a/hw1.html
+++ b/hw1.html
@@ -26,5 +26,6 @@
 </p>
 
 <a href="https://www.madicatalano.github.io">Back to homepage</a> 
+<img src="https://images.theconversation.com/files/317421/original/file-20200226-24651-1or3uxq.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1200&h=675.0&fit=crop" alt="Red Panda">
 </body>
 </html>
