--- a/hw2.html
+++ b/hw2.html
@@ -9,12 +9,14 @@
 <h2>Homework 2 Assignment</h2>
 <h3>CHAPTER TWO</h3>
 <p>In chapter two, two topics that stood out to me were The Evils of Duplication, Orthogonality, and Tracer Bullets. 
-The Evils of Duplication and Orthogonality go hand in hand as the first section states not to duplicate information throughout 
-your code and the second tells you not to split the information across multiple system components. 
+    The Evils of Duplication and Orthogonality go hand in hand as the first section states not to duplicate information throughout 
+    your code and the second tells you not to split the information across multiple system components. I thought both sections were useful 
+    information as I have not learned any of this in my previous computer science courses.  
 </p>
 
-<p>There are four different sections in The Evils of Duplication, imposed duplication, inadvertent duplication, impatient duplication, 
-    and interdeveloper duplication. Each adds to the instability of duplicating code which causes extra time in maintenance. 
+<p>There are four different sections in <i>The Evils of Duplication</i>, imposed duplication, inadvertent duplication, impatient duplication, 
+    and interdeveloper duplication. Learning about each evil is helpful in order to prevent myself from (hopefully) doing these mistakes myself.
+    Each evil adds to the instability of duplicating code which causes extra time in maintenance. 
     Imposed duplication is where the developer feels as if the code requires duplication. This is because we often have the same information 
     represented in different forms throughout the code. The DRY principle comes into play where the developer should keep the information only 
     in the code, not the comments. Inadvertent duplication is where the developer doesn’t realize they are duplicating the information. 
@@ -24,12 +26,12 @@ your code and the second tells you not to split the information across multiple 
 </p>
 
 <p>
-    Orthogonality is critical for code that easy to design, build, test. If two methods are orthogonal, they are independent of each other 
+    <i>Orthogonality</i> is critical for code that easy to design, build, test. If two methods are orthogonal, they are independent of each other 
     and a change in one does not affect the other. On the other hand, nonorthogonal systems are more complex to change and can cause more 
     problems down the line. Orthogonal systems have an increase in productivity and an overall reduced risk. The developer gains productivity 
     because the orthogonal approach promotes the reuse of old code. There is no need to change existing code when adding new code. This causes 
     less testing time, and the system is easier to reconfigure. A good thing to keep in mind is that if the object you are manipulating requires 
-    to create or access objects in a special way, then it’s not orthogonal.
+    to create or access objects in a special way, then it’s not orthogonal. 
 </p>
 
 <a href="https://www.madicatalano.github.io">Back to homepage</a> 
