--- a/ART 215/AmazonIndex.html
+++ b/ART 215/AmazonIndex.html
@@ -4,6 +4,6 @@
         <title>Art 215 Amazon Redesign</title>
     </head>
     <body>
-        <h1>hello</h1>
+        <h1>Hello! Welcome to Amazon</h1>
     </body>
 </html>
