end of class tutorial

--- a/ART 215/AmazonIndex.html
+++ b/ART 215/AmazonIndex.html
@@ -4,6 +4,20 @@
         <title>Art 215 Amazon Redesign</title>
     </head>
     <body>
-        <h1>Hello! Welcome to Amazon</h1>
+        <h1>Hello! Welcome to my Amazon redesign!</h1>
+        <p>This is my new paragraph text</p>
+        <p><i>Here is italic text!</i></p>
+        <h2>Header 2 text <br> and that was a line break</h2>
+        
+        <ol> 
+            <li>item 1</li>
+            <li>item 2</li>
+            <li>item 3</li>
+        </ol>
+
+        <ul> 
+            <li>bulleted item</li>
+            <li>bulleted item 2</li>
+        </ul>
     </body>
 </html>
