linked correct css file

--- a/ART 215/index.html
+++ b/ART 215/index.html
@@ -1,6 +1,6 @@
 <html>
 <title>Amazon Redesign</title>
-<link rel = "stylesheet" href = "tester.css">
+<link rel = "stylesheet" href = "mystyle.css">
 <link rel = "stylesheet" href = "stylesheet.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <body>
