rough draft (to be submitted)

--- a/ART 215/index.html
+++ b/ART 215/index.html
@@ -19,9 +19,15 @@
                 </div>
         </div>
         <div class = "iconHolder">
-            <div class = "icons"></div>
-            <div class = "icons"></div>
-            <div class = "icons"></div>
+            <div class = "icons">
+                <img src = "IMAGES/categories.pdf">
+            </div>
+            <div class = "icons">
+                <img src = "IMAGES/account.pdf">
+            </div>
+            <div class = "icons">
+                <img src = "IMAGES/cart.pdf">
+            </div>
         </div>
     </header>
     <nav class = "stroke">
