--- a/ART 215/index.html
+++ b/ART 215/index.html
@@ -8,7 +8,7 @@
 
     <header>
         <div class = "logo">
-            <img src = "IMAGES/logo.pdf">
+            <a href="index.html"><img src = "IMAGES/logo.pdf"></a>
         </div>
         <div class = "searchbar">
                 <div class="search">
@@ -23,22 +23,22 @@
                 <img src = "IMAGES/categories.pdf">
             </div>
             <div class = "icons">
-                <img src = "IMAGES/account.pdf">
+                <a href="linkTester.html"><img src = "IMAGES/account.pdf"></a>
             </div>
             <div class = "icons">
-                <img src = "IMAGES/cart.pdf">
+                <a href="linkTester.html"><img src = "IMAGES/cart.pdf"></a>
             </div>
         </div>
     </header>
     <nav class = "stroke">
         <ul>
-            <li><a href="#"><h1>Prime Video</h1></a></li>
-            <li><a href="#"><h1>Amazon Music</h1></a></li>
-            <li><a href="#"><h1>Buy Again</h1></a></li>
+            <li><a href="linkTester.html"><h1>Prime Video</h1></a></li>
+            <li><a href="linkTester.html"><h1>Amazon Music</h1></a></li>
+            <li><a href="linkTester.html"><h1>Buy Again</h1></a></li>
         </ul>
     </nav>
     <div class = "slider">
-        <img src = "IMAGES/echodot.pdf">
+        <a href="linkTester.html"><img src = "IMAGES/echodot.pdf"></a>
     </div>
     
     <nav style = "background-color: 131A22;">
@@ -47,50 +47,50 @@
     <section>
         <div class = "column">
             <div class = "squarePictures">
-                <img src = "IMAGES/backpack.pdf">
+                <a href="linkTester.html"><img src = "IMAGES/backpack.pdf"></a>
             </div>
             <div class = "textbox">
-                <p>lorem ipsum</p>
+                <a href="linkTester.html"><p>lorem ipsum</p></a>
                 <p style = "float: right;">$$</p>
             </div>
             <div class = "squarePictures">
-                <img src = "IMAGES/waterbottles.pdf">
+                <a href="linkTester.html"><img src = "IMAGES/waterbottles.pdf"></a>
             </div>
             <div class = "textbox">
-                <p>lorem ipsum</p>
+                <a href="linkTester.html"><p>lorem ipsum</p></a>
                 <p style = "float: right;">$$</p>
             </div>
             
         </div>
         <div class = "column">
             <div class = "squarePictures">
-                <img src = "IMAGES/headphones.pdf">
+                <a href="linkTester.html"><img src = "IMAGES/headphones.pdf"></a>
             </div>
             <div class = "textbox">
-                <p>lorem ipsum</p>
+                <a href="linkTester.html"><p>lorem ipsum</p></a>
                 <p style = "float: right;">$$</p>
             </div>
             <div class = "squarePictures">
-                <img src = "IMAGES/shoes.pdf">
+                <a href="linkTester.html"><img src = "IMAGES/shoes.pdf"></a>
             </div>
             <div class = "textbox">
-                <p>lorem ipsum</p>
+                <a href="linkTester.html"><p>lorem ipsum</p></a>
                 <p style = "float: right;">$$</p>
             </div>
         </div>
         <div class = "column">
             <div class = "squarePictures">
-                <img src = "IMAGES/watch.pdf">
+                <a href="linkTester.html"><img src = "IMAGES/watch.pdf"></a>
             </div>
             <div class = "textbox">
-                <p>lorem ipsum</p>
+                <a href="linkTester.html"><p>lorem ipsum</p></a>
                 <p style = "float: right;">$$</p>
             </div>
             <div class = "squarePictures">
-                <img src = "IMAGES/book.pdf">
+                <a href="linkTester.html"><img src = "IMAGES/book.pdf"></a>
             </div>
             <div class = "textbox">
-                <p>lorem ipsum</p>
+                <a href="linkTester.html"><p>lorem ipsum</p></a>
                 <p style = "float: right;">$$</p>
             </div>
         </div>
@@ -102,40 +102,40 @@
 
         <div class = "column2">
             <div class = "rectanglePictures">
-                <img src = "IMAGES/makeup.pdf">
+                <a href="linkTester.html"><img src = "IMAGES/makeup.pdf"></a>
             </div>
             <div class = "textbox2">
-                <p>lorem ipsum</p>
+                <a href="linkTester.html"><p>lorem ipsum</p></a>
                 <p style = "float: right;">$$</p>
             </div>
         </div>
         <div class = "column2">
             <div class = "rectanglePictures">
-                <img src = "IMAGES/bodyoil.pdf">
+                <a href="linkTester.html"><img src = "IMAGES/bodyoil.pdf"></a>
             </div>
             <div class = "textbox2">
-                <p>lorem ipsum</p>
+                <a href="linkTester.html"><p>lorem ipsum</p></a>
                 <p style = "float: right;">$$</p>
             </div>
         </div>
         <div class = "column2">
             <div class = "rectanglePictures">
-                <img src = "IMAGES/alexascreen.pdf">
+                <a href="linkTester.html"><img src = "IMAGES/alexascreen.pdf"></a>
             </div>
             <div class = "textbox2">
-                <p>lorem ipsum</p>
+                <a href="linkTester.html"><p>lorem ipsum</p></a>
                 <p style = "float: right;">$$</p>
             </div>
         </div>
     </article>
     <footer class = "stroke">
         <ul>
-            <li><a href="#"><h1 style = "color: #FFFFFF; padding-top: 10px;">About Amazon</h1></a></li>
-            <li><a href="#"><h1 style = "color: #FFFFFF; padding-top: 10px;">Careers</h1></a></li>
-            <li><a href="#"><h1 style = "color: #FFFFFF; padding-top: 10px;" >Customer Service</h1></a></li>
-            <li><a href="#"><h1 style = "color: #FFFFFF; padding-top: 10px;" >Your Account </h1></a></li>
-            <li><a href="#"><h1 style = "color: #FFFFFF; padding-top: 10px;" >Your Orders</h1></a></li>
-            <li><a href="#"><h1 style = "color: #FFFFFF; padding-top: 10px;" >Prime</h1></a></li>
+            <li><a href="linkTester.html"><h1 style = "color: #FFFFFF; padding-top: 10px;">About Amazon</h1></a></li>
+            <li><a href="linkTester.html"><h1 style = "color: #FFFFFF; padding-top: 10px;">Careers</h1></a></li>
+            <li><a href="linkTester.html"><h1 style = "color: #FFFFFF; padding-top: 10px;" >Customer Service</h1></a></li>
+            <li><a href="linkTester.html"><h1 style = "color: #FFFFFF; padding-top: 10px;" >Your Account </h1></a></li>
+            <li><a href="linkTester.html"><h1 style = "color: #FFFFFF; padding-top: 10px;" >Your Orders</h1></a></li>
+            <li><a href="linkTester.html"><h1 style = "color: #FFFFFF; padding-top: 10px;" >Prime</h1></a></li>
             </ul>
     </footer>
 </body>
