--- a/ART 215/index.html
+++ b/ART 215/index.html
@@ -37,10 +37,13 @@
             <li><a href="linkTester.html"><h1>Buy Again</h1></a></li>
         </ul>
     </nav>
+
+
     <div class = "slider">
-        <a href="linkTester.html"><img src = "IMAGES/echodot.pdf"></a>
+        <a href="linkTester.html"><img src = "IMAGES/echodotDetails.pdf"></a>
     </div>
     
+
     <nav style = "background-color: 131A22;">
         <h2>Today's Deals</h2>
     </nav>
